--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = "1.0.123"
-serde_json = "1.0.64"
+serde = { version = "1.0.123", features = ["derive"]}
+json5 = "0.3.0"
